interpreter-janeklang/tests/good/06_recurrentFunction_1.janek
int factorial(int n) {
    if (n == 0) {
        return 1;
    }
    return n * factorial(n - 1);
}

int main() {
    int result = factorial(30);
    print(result);
    return 0;
}
