interpreter-janeklang/tests/bad/06_recurentWrongType_5.janek
int skibidi(bool t){
    return skibidi(1);
}

int main(){
    skibidi(true);
}